1998-01-26  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* ObserverSwarm.m: Include gui.h.
	([ObserverSwarm -buildObjects]): Use GUI_ButtonRight instead of
	ButtonRight.  Reformatting throughout.

	* ObserverSwarm.h: Include gui.h instead of tkobjc.h.
	(ObserverSwarm):  Make colorMap conform to the Colormap protocol
	instead of being statically typed.  Make worldRaster conform to
	the ZoomRaster protocol instead of being statically typed.
	Reformatting throughout.

	* ModelSwarm.h: Don't include tkobjc.h.
	Reformatting throughout.

	* Bug.h: Include gui.h.  Make argument to drawSelfOn: conform
	to the Raster protocol instead of being statically typed.
	Reformatting throughout.

	* Bug.m: Likewise.
	([Bug -drawSelfOn:]): Make color be 2, not 3; there's no
	colormap entry for that.  Thanks to Pietro Terna for
	reporting this.

v1998-01-13  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* ObserverSwarm.m ([ObserverSwarm -buildObjects]): Use
	CREATE_PROBE_DISPLAY to create probe displays for modelSwarm
	and ObserverSwarm.

1997-12-17  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* ModelSwarm.h: Include objectbase.h instead of swarmobject.h.
	* ObserverSwarm.h: Likewise.
	* ObserverSwarm.m: Likewise.

	* ModelSwarm.m ([ModelSwarm +createBegin:aZone]): Use
	id <ProbeMap> probeMap instead of ProbeMap*.
	* ObserverSwarm.m ([ObserverSwarm +createBegin:]): Likewise.
	([ObserverSwarm -buildActions]): Send doTkEvents to actionCache,
	not controlPanel.

	* Makefile (SWARMHOME): Don't define if already defined.
