@@ -88,7 +88,7 @@
   // First, create a colormap: this is a global resource, the information
   // here is used by lots of different objects.
 
-  colorMap = [XColormap create: [self getZone]];
+  colorMap = [Colormap create: [self getZone]];
 
   [colorMap setColor: 0 ToName: "black"];
   [colorMap setColor: 1 ToName: "red"];
@@ -108,7 +108,7 @@
   // display arbitrary 2d value arrays on a given Raster widget.
 
   foodDisplay = [Value2dDisplay createBegin: [self getZone]];
-  [foodDisplay setDisplayWidget: worldRaster Colormap: colorMap];
+  [foodDisplay setDisplayWidget: worldRaster colormap: colorMap];
   [foodDisplay setDiscrete2dToDisplay: [modelSwarm getFood]];
   foodDisplay = [foodDisplay createEnd];
 
@@ -125,11 +125,9 @@
   // Also, tell the world raster to send mouse clicks to the heatbugDisplay
   // this allows the user to right-click on the display to probe the bugs.
 
-  [worldRaster setButton: GUI_ButtonRight
+  [worldRaster setButton: ButtonRight
                Client: bugDisplay
                Message: M(makeProbeAtX:Y:)];
-
-
 
   return self;
 }
